cmake_minimum_required(VERSION 3.10)
project(OPENCVPROJECT)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV version: ${OpenCV_VERSION}")
add_executable(opencv_example src/main.cpp)
add_executable(opencv_example2 src/armor_detector_v2.cpp)
target_include_directories(opencv_example PRIVATE ${OpenCV_INCLUDE_DIRS})
target_include_directories(opencv_example2 PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(opencv_example ${OpenCV_LIBS})
target_link_libraries(opencv_example2 ${OpenCV_LIBS})